Fixed color contrast issue and ccs style

--- a/css/style.css
+++ b/css/style.css
@@ -7,68 +7,6 @@
   box-sizing: border-box;
 }
 
-@font-face {
-    font-family: 'NexaBold'; /*a name to be used later*/
-    src: url('font/NexaBold.otf'); /*URL to font*/
-}
-
-
-h1{
-    font-family: 'NexaBold';
-    color: #204070;
-    font-size: 100px;
-}
-
-.button {
-    position: relative;
-    background-color: #fe8551;
-    border: none;
-    font-size: 15px;
-    color: #FFFFFF;
-    padding: 10px;
-    width: 200px;
-    text-align: center;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    text-decoration: none;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.button:after {
-    content: "";
-    background: #90EE90;
-    display: block;
-    position: absolute;
-    padding-top: 300%;
-    padding-left: 350%;
-    margin-left: -20px!important;
-    margin-top: -120%;
-    opacity: 0;
-    transition: all 0.8s
-}
-
-.button:active:after {
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-    transition: 0s
-}
-
-.parallax {
-    /* The image used */
-    background-image: url("../img/8.jpg");
-
-    /* Set a specific height */
-    min-height: 500px;
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-  /*  background-position: left;
-    background-repeat: no-repeat;*/
-    background-size: cover;
-}
-
 .sidebar {
     position: fixed;
     width: 200px;
@@ -130,9 +68,6 @@ section {
     color: #f1f1f1;
 }
 
-.sectionDark h1 {
-	color: #EDDDD4;
-}
   /*  ===============  Scrollbar  ===============  */
   .header {
     position: fixed;
@@ -191,7 +126,7 @@ section {
 
 /* Create an active/current "tab button" class */
 .tab button.active {
-    
+
     background-color: #204070;
 }
 
@@ -215,6 +150,7 @@ section {
 /* Paragraph content */
 p{
     text-align: justify;
+    color: black;
 }
 
 /* Table content */
